// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="control-container"
  onKeyPress={[Function]}
  role="presentation"
>
  <p
    className="control-label"
  >
    Pwout
  </p>
  <select>
    <option
      value={null}
    >
      
    </option>
    <option
      value="foo"
    >
      foo
    </option>
  </select>
</div>
`;

exports[`should render correctly with query 1`] = `
<div
  className="control-container"
  onKeyPress={[Function]}
  role="presentation"
>
  <p
    className="control-label"
  >
    Pwout
  </p>
  <select>
    <option
      value="foo"
    >
      foo
    </option>
    <option
      value="foofoo"
    >
      foofoo
    </option>
    <option
      value="fou"
    >
      fou
    </option>
    <option
      value="fooooo"
    >
      fooooo
    </option>
  </select>
</div>
`;
